  * NodeConstraints calculations for moving mesh users
  * Stack trace output on any uncaught exception
  * Corrected non-standard C++ in FE class specializations
  * Multithreaded FEMSystem assembly functions
  * Assorted efficiency improvements
  * Various Trilinos, Tetgen, Triangle interface improvements
  * Compatibility with newer third-party packages, compilers
  * Many assorted bug fixes

0.7.0 -> 0.7.1
  * Periodic boundary support enhancements
  * New example with subdomain-restricted variables
  * New examples with adjoint-based adaptivity, sensitivities
  * More flexible multiphysics AdjointResidualErrorEstimator norms
  * PatchRecoveryErrorEstimator of directional derivative seminorms
  * Improved VTK output
  * Separate RBEvaluation class for online Reduced Basis solves
  * Object-based assembly API options
  * Partitioning can now use element weights
  * Better support for boundaries with multiple BC IDs
  * More matrix printing options
  * XZ compression support
  * Subset solves with PETSc
  * Better SLEPc compatibility
  * Properly read restart files with a subset of our variables
  * New utility for comparing restart files
  * Easier enabling of float, long double configurations
  * Most features now work with RTTI disabled
  * Many assorted bug fixes

0.6.4 -> 0.7.0
  * Certified Reduced Basis model creation/evaluation
  * Adjoint-based sensitivity calculations and error indicators
  * Support for newer PETSc, SLEPc
  * More autodetection of optional dependencies
  * New examples:
  ** Discontinuous Galerkin
  ** SCALAR Lagrange multipliers
  ** Certified Reduced Basis method
  * Parallel:: utilities for std::set data
  * Parallel:: support for non-default MPI communicators
  * Parallel:: support for non-magic-number message tags
  * GMVIO support for subdomain material ids
  * ExodusII support for writing discontinuous data
  * Switched some example output formats to Exodus, now that GMV is going away